[package]
name = "hook_king"
version = "0.1.0"
edition = "2024"
authors = ["Ken Masters <GameHackingDojo@gmail.com>"]
description = "Automated efficient Assembly hooking library that works internally and externally for both x86/x64"
license = "GPL-3.0"
repository = "https://github.com/GameHackingDojo/hook_king"
license-file = "LICENSE"

[dependencies]
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
paste = "1.0.15"
winapi = { version = "0.3.9", features = [
  "consoleapi",
  "wincon",
  "processthreadsapi",
  "libloaderapi",
  "memoryapi",
  "wow64apiset",
] }
parking_lot = "0.12.4"
dashmap = "=6.1.0"

[dev-dependencies]


[[test]]
name = "test_exe"
path = "tests/test_exe.rs"
harness = false            # This allows you to write a proper main()
