[package]
name = "hook_king"
version = "0.1.1"
edition = "2024"
authors = ["Ken Masters <GameHackingDojo@gmail.com>"]
description = "Low-level automated hooking library with detours, trampolines, and memory management. Supports internal/external process hooking with optional original code preservation."
license = "GPL-3.0"
repository = "https://github.com/GameHackingDojo/hook_king"
license-file = "LICENSE"

keywords = ["hook", "detour", "trampoline", "assembly", "code-injection"]
categories = [
  "memory-management",
  "os",
  "development-tools::debugging",
  "api-bindings",
]
documentation = "https://docs.rs/hook_king"
readme = "README.md"

[dependencies]
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
paste = "1.0.15"
winapi = { version = "0.3.9", features = [
  "consoleapi",
  "wincon",
  "processthreadsapi",
  "libloaderapi",
  "memoryapi",
  "wow64apiset",
] }
dashmap = "=6.1.0"

[dev-dependencies]


[[test]]
name = "test_exe"
path = "tests/test_exe.rs"
harness = false            # This allows you to write a proper main()
